<resources>
    <string name="app_name">Pizzalab</string>
    <string name="pizzaBaslik">Beef Cheese</string>
    <string name="peynirYazi">Cheese</string>
    <string name="sucukYazi">Sausage</string>
    <string name="zeytinYazi">Olive</string>
    <string name="biberYazi">Pepper</string>
    <string name="teslimatSure">25 min</string>
    <string name="teslimatBaslik">Delivery</string>
    <string name="pizzaAciklama">This delicious flavor is just a click away!!</string>
    <string name="fiyatYazi">$ 4.99</string>
    <string name="buttonYazi">Add to cart</string>
</resources>